--- a/recipe_frontend/package.json
+++ b/recipe_frontend/package.json
@@ -17,6 +17,7 @@
     "notistack": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
